# qtamp

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  COPYING  README.md  README_LINUX.md  build_linux.sh
.github/workflows/: tests.yml
LICENSES/lord3nd3r/: MIT
LICENSES/preferred/: MIT
cmake/: FindQtWasabi.cmake
docs/: OKF-remote-status.md  OKF-remote.md  PROTOCOL.md
packaging/linux/: qtamp.desktop
pylon/: .gitignore  PROTOCOL.md  package-lock.json  package.json  pylon.config.ts  tsconfig.json
pylon/src/: app.e2e.test.ts  backendlink.test.ts  backendlink.ts  index.ts  mock-backend.ts  pushqueue.ts
scripts/: build-wasm-remote.sh  e2e-remote.sh  fetch-deps.sh  fetch-duckdb.sh  install-macos.sh  install.sh
src/: MilkdropItem.cpp  MilkdropItem.h  audiometa.cpp  audiometa.h  backendserver.cpp  backendserver.h  bookmarkmanager.cpp  bookmarkmanager.h  dialogs.cpp  dialogs.h  eq10dsp.cpp  eq10dsp.h  eqpresets.cpp  eqpresets.h  equalizerwindow.cpp  equalizerwindow.h  fakehost.h  graphqltransport.cpp  graphqltransport.h  main.cpp  medialibraryindex.cpp  medialibraryindex.h  medialibrarywindow.cpp  medialibrarywindow.h  milkdropwindow.cpp  milkdropwindow.h  modernskinengine.cpp  modernskinengine.h  mpris2.cpp  mpris2.h  playerhost.h  playlistwindow.cpp  playlistwindow.h  qt5compat.h  recentfilesmanager.cpp  recentfilesmanager.h  remotehost.cpp  remotehost.h  remotestate.cpp  remotestate.h  (+15 more)
tests/: CMakeLists.txt  README.md  fakehost_test.cpp  pledit_visual_test.sh  remotehost_test.cpp  remotestate_test.cpp  ssereader_test.cpp  subwin_isolation_test.sh  wavreader_test.cpp
tests/regression/: container_root_test.sh  menu_dump_test.sh  run.sh
tests/regression/menus/: golden-A.txt  golden-B.txt
tests/remote/: backend_test.sh  bearer_header_test.sh  graphql_sync_test.sh  orchestrated_test.sh  sync_test.sh
tools/: tbcompare.py  titlemeasure.py
wasm/: Shell.qml  qtamp_wasm.qrc  qtamp_wasm_remote.qrc
wasm/assets/skin/QTAMP-WinampModernPP/: readme.md
wasm/assets/skin/QTAMP-WinampModernPP/xml/: configdrawer.xml  player-elements-shade.xml  player-elements.xml  player-normal-group.xml  player-normal.xml  player-shade-group.xml
wasm/remote/: index.html
wasm/test/: cdp-check-graphql.mjs  cdp-check-remote.mjs  cdp-check.mjs  link-test.mjs  mock-remote-server.mjs
wiki/: README.md  index.md
wiki/architecture/: embedding-boundary.md  hybrid-design.md  index.md  pipeline.md
wiki/components/: host-interface.md  index.md  layout.md  milkdrop-visualizer.md  painters-and-registries.md  skinruntime-maki-bridge.md  skinxml.md  surface-skinview-skinquickitem.md  wasabi-compat.md  widget-tree.md
wiki/conventions/: cardinal-rules.md  comments.md  commit-authorship.md  index.md
wiki/glossary/: index.md  terms.md
wiki/goals/: any-skin-fidelity.md
wiki/repos/: index.md  qtamp.md  qtwasabi.md  relationship.md
wiki/workflow/: build-and-test.md  env-knobs.md  index.md
